Agregar exporter para H2, permitir exportar JSON, CSV y algunos dialectos SQL gzippeados